[package]
name = "xenstore-sys"
version = "0.1.3"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Rust FFI bindings for libxenstore"
readme = "README.md"
homepage = "https://github.com/Wenzel/xenstore-sys"
repository = "https://github.com/Wenzel/xenstore-sys"
license = "GPL-3.0-only"
keywords = ["xen", "xenstore"]
categories = ["external-ffi-bindings"]
links = "xenstore"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = ">=0.49"
